--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,79 @@
-/* You can add global styles to this file, and also import other style files */
+.profil100 {
+    border-radius: 50%; }
+  
+  .bouton {
+    color: #7D45FC;
+    font-family: "Grand hotel";
+    font-size: 20px;
+    background-color: white;
+    border-color: #7D45FC;
+    border-radius: 7px;
+    border-width: 1px;
+    border-style: solid;
+    margin-top: .25em; }
+    .bouton:hover {
+      box-shadow: 0px 0px 10px #5a13fb; }
+  
+  .label {
+    color: #7D45FC;
+    font-family: "Grand hotel";
+    font-weight: 100%;
+    font-size: 20px; }
+  
+  input[type='text'] {
+    color: #7D45FC;
+    border-color: #7D45FC;
+    border-radius: 7px;
+    border-width: 1px;
+    border-style: solid;
+    font-family: "Grand hotel";
+    font-size: 20px;
+    width: 15em; }
+  
+  input[type='password'] {
+    color: #7D45FC;
+    border-color: #7D45FC;
+    border-radius: 7px;
+    border-width: 1px;
+    border-style: solid;
+    font-family: "Grand hotel";
+    font-size: 20px;
+    width: 15em; }
+
+  input[type='button'] {
+    color: #7D45FC;
+    border-color: #7D45FC;
+    border-radius: 7px;
+    border-width: 1px;
+    border-style: solid;
+    font-family: "Grand hotel";
+    font-size: 20px;
+    width: 15em; }
+  
+  input[type='file'] {
+    color: #7D45FC;
+    font-family: "Grand hotel"; }
+  
+  * {
+    box-sizing: border-box; }
+  
+  .formulaire {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute; }
+    .formulaire .groupeLabel {
+      margin-bottom: .25em;
+      margin-top: .25em;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between; }
+    
+  a {
+    font-style: italic;
+    text-decoration: none;
+    color: #7D45FC;
+    font-weight: bold; }
+  
+  /*# sourceMappingURL=main.css.map */
+  
