Mise en place fonctionnelle des requetes HTTP

--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -12,4 +12,4 @@
     <button (click)="Connexion()" name="btnEnvoi" class = "bouton">Connexion</button><br/>
     <button (click)="getProfile()" name="btnEnvoi" class = "bouton">getProfile</button><br/>
     <h3><a routerLink="/SignUp">S'inscrire </a>jsnl10s1983</h3>
-</form>  
+<!-- </form>   -->
