--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,6 +1,7 @@
 //Police
 $police: 'Grand hotel';
 $couleurPolice: #7D45FC;
+$couleurBouton: #c69;
 
 //Formes
-$borderRadius: 7px;
+$borderRadius: 8px;
