--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -2,31 +2,31 @@
 <div>
   <!-- <form action = "membres/controlers/global.php?action=viewSignUp" enctype='multipart/form-data' method="post" class="formulaire"> -->
     <div class="groupeLabel">
-      <div class="label">Nom: </div><input type="text" name="name">
+     <!-- <div class="label">Nom: </div><input [(ngModel)]="personne.nom" type="text" name="name"> -->
+     <input class='input-text' [(ngModel)]="personne.nom" type="text" name="name" placeholder='Nom'>
     </div>
     <div class ="groupeLabel">
-        <div class="label">Prénom: </div><input type="text" name="first">
+        <div class="label">Prénom: </div><input [(ngModel)]="personne.prenom" type="text" name="first">
     </div>
     <div class ="groupeLabel">
-        <div class="label">Mot de passe: </div><input type="password" name="password">
+        <div class="label">Mot de passe: </div><input [(ngModel)]="personne.password"type="password" name="password">
     </div>
     <div class ="groupeLabel">
-        <div class="label">Retaper le mot de passe: </div><input type="password" name="passwordConfirm">
+        <div class="label">Retaper le mot de passe: </div><input [(ngModel)]="confirmPassword"type="password" name="passwordConfirm">
     </div>
     <div class ="groupeLabel">  
-        <div class="label">Téléphone portable: </div><input type="text" name="mobile" placeholder="01-23-45-67-89 ou 0123456789">
+        <div class="label">Téléphone portable: </div><input [(ngModel)]="personne.mobile"type="text" name="mobile" placeholder="01-23-45-67-89 ou 0123456789">
     </div>
     <div class ="groupeLabel">
-        <div class="label">Date de naissance: </div><input type="text" placeholder ='jj/mm/aaaa' name="birth" id='lblDateNaissance'>
-    </div>
-
-    <div class ="groupeLabel">
-        <div class="label">E-mail: </div><input type="text" name="mail">
+        <div class="label">Date de naissance: </div><input [(ngModel)]="personne.dateNaissance"type="text" placeholder ='jj/mm/aaaa' name="birth" id='lblDateNaissance'>
     </div>
     <div class ="groupeLabel">
-        <div class="label">Photo de profil: </div><input type="file" name="file">
+        <div class="label">E-mail: </div><input [(ngModel)]="personne.mail"type="text" name="mail">
+    </div>
+    <div class ="groupeLabel">
+        <div class="label">Photo de profil: </div><input type="file" (change)="selectionFichier($event)" name="avatar" placeholder="Avatar de profil" accept=".jpg, .jpeg, .png, .bmp">
     </div> 
-    <p><input type="button" value ="Valider" class = "bouton"></p>
-    <p><input type="submit" value ='Retour' class = "bouton"></p>
-  <!-- </form> -->
+    <p><button (click)="validation()" class = "bouton">Valider</button></p>
+    <p><button (click)="retour()" class = "bouton">Retour</button></p>
+  <!-- </form>  -->
 </div>
