Ajout de la banniere + sauvegarde

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,14 @@
-<!-- <h4>
-  Titre de séparation
-</h4> -->
-<!-- <div class='navbar-fixed'> -->
-    <!-- <nav class='sidenav'> -->
-            
-        <!-- <div class ='nav-wrapper'>
-            <ul class='left hide-on-med-and-down'>
-                <li> Premier lien</li>
-                <li> deuxieme lien</li>
-                <li> troisieme lien</li>
-                <li> quatrieme lien</li>
-            </ul>
-        </div> -->
-    <!-- </nav> -->
-    <router-outlet></router-outlet>
-<!-- </div> -->
-<body>
-    <div class='nav-wrapper' style="background-color: blue;">
-        <ul>
-            <li><a href="#!">Premier</a></li>
-            <li><a href="#!">Premier</a></li>
-            <li><a href="#!">Premier</a></li>
-            <li><a href="#!">Premier</a></li>
-        </ul>
+<div id="banniere"></div>
+<nav>
+    <div class="nav-wrapper z-depth-4 fixed">
+      <a href="#" class="brand-logo right">Logo</a>
+      
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="sass.html"><i class="material-icons prefix">menu</i></a></li>
+        <li><a href="sass.html">Premier lien</a></li>
+        <li><a href="badges.html">Second lien</a></li>
+        <li><a href="collapsible.html">Dernier lien</a></li>
+      </ul>
     </div>
-    <router-outlet></router-outlet>
-</body>
-
-
-
-<!-- <h4>
-    Titre de séparation
-</h4> -->
+  </nav>
+<router-outlet></router-outlet>
