--- a/src/styles.css
+++ b/src/styles.css
@@ -1349,7 +1349,7 @@ input.mat-input-element {
 
 a {
   text-decoration: none;
-  color: black; }
+  color: #f50057; }
 
 .profil {
   max-width: 300px; }
