--- a/src/app/errorsHandlers/modalHttpErrorHandler.html
+++ b/src/app/errorsHandlers/modalHttpErrorHandler.html
@@ -1,8 +1,9 @@
-<!-- <h1 mat-dialog-title>{{titre}}</h1>
+<h1 mat-dialog-title>{{titre}}</h1>
 <div mat-dialog-content>
         <div *ngIf="status"><br><br><b>Status renvoyé : </b>{{status}}</div>
         <div *ngIf="url"><br><br><b>URL d'origine : </b>{{url}}</div>
         <div *ngIf="statustext"><br><br><b>Status Text : </b>{{statustext}}</div>
         <div *ngIf="headers"><br><br><b>Headers d'origine : </b>{{headers}}</div>
         <div *ngIf="message"><br><br><b>Message du serveur : </b>{{message}}</div>
-</div> -->
+        <div *ngIf="error"><br><br><b>Description de l'erreur : </b>{{error}}</div>
+</div>
