--- a/src/css/_formulaire.scss
+++ b/src/css/_formulaire.scss
@@ -1,16 +1,10 @@
+@include mat-form-field-theme($myTheme);
+@include mat-sidenav-theme($myTheme);
+
 @mixin myFormulaire($myTheme){
-    .signUp{
+    .register{
         @include mat-form-field-theme($myTheme);
         @include mat-sidenav-theme($myTheme);
-        &.icone-formulaire{
-
-        }
-        &.input-text{
-
-        }
-        &.btn-formulaire{
-            background-color: blue;
-            
-        }
+        
     }
 }
