--- a/src/styles.css
+++ b/src/styles.css
@@ -506,7 +506,7 @@ input.mat-input-element {
   .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
     color: #f50057; }
   .mat-accent .mat-option.mat-selected:not(.mat-option-disabled) {
-    color: #ff4081; }
+    color: #448aff; }
   .mat-warn .mat-option.mat-selected:not(.mat-option-disabled) {
     color: #f44336; }
   .mat-option.mat-selected:not(.mat-option-multiple):not(.mat-option-disabled) {
@@ -532,7 +532,7 @@ input.mat-input-element {
 .mat-pseudo-checkbox-indeterminate,
 .mat-accent .mat-pseudo-checkbox-checked,
 .mat-accent .mat-pseudo-checkbox-indeterminate {
-  background: #ff4081; }
+  background: #448aff; }
 
 .mat-primary .mat-pseudo-checkbox-checked,
 .mat-primary .mat-pseudo-checkbox-indeterminate {
@@ -566,7 +566,7 @@ input.mat-input-element {
   .mat-button.mat-primary .mat-button-focus-overlay, .mat-icon-button.mat-primary .mat-button-focus-overlay, .mat-stroked-button.mat-primary .mat-button-focus-overlay {
     background-color: rgba(245, 0, 87, 0.12); }
   .mat-button.mat-accent .mat-button-focus-overlay, .mat-icon-button.mat-accent .mat-button-focus-overlay, .mat-stroked-button.mat-accent .mat-button-focus-overlay {
-    background-color: rgba(255, 64, 129, 0.12); }
+    background-color: rgba(68, 138, 255, 0.12); }
   .mat-button.mat-warn .mat-button-focus-overlay, .mat-icon-button.mat-warn .mat-button-focus-overlay, .mat-stroked-button.mat-warn .mat-button-focus-overlay {
     background-color: rgba(244, 67, 54, 0.12); }
   .mat-button[disabled] .mat-button-focus-overlay, .mat-icon-button[disabled] .mat-button-focus-overlay, .mat-stroked-button[disabled] .mat-button-focus-overlay {
@@ -574,7 +574,7 @@ input.mat-input-element {
   .mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary {
     color: #f50057; }
   .mat-button.mat-accent, .mat-icon-button.mat-accent, .mat-stroked-button.mat-accent {
-    color: #ff4081; }
+    color: #448aff; }
   .mat-button.mat-warn, .mat-icon-button.mat-warn, .mat-stroked-button.mat-warn {
     color: #f44336; }
   .mat-button.mat-primary[disabled], .mat-button.mat-accent[disabled], .mat-button.mat-warn[disabled], .mat-button[disabled][disabled], .mat-icon-button.mat-primary[disabled], .mat-icon-button.mat-accent[disabled], .mat-icon-button.mat-warn[disabled], .mat-icon-button[disabled][disabled], .mat-stroked-button.mat-primary[disabled], .mat-stroked-button.mat-accent[disabled], .mat-stroked-button.mat-warn[disabled], .mat-stroked-button[disabled][disabled] {
@@ -594,7 +594,7 @@ input.mat-input-element {
   .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
     background-color: #f50057; }
   .mat-raised-button.mat-accent, .mat-fab.mat-accent, .mat-mini-fab.mat-accent {
-    background-color: #ff4081; }
+    background-color: #448aff; }
   .mat-raised-button.mat-warn, .mat-fab.mat-warn, .mat-mini-fab.mat-warn {
     background-color: #f44336; }
   .mat-raised-button.mat-primary[disabled], .mat-raised-button.mat-accent[disabled], .mat-raised-button.mat-warn[disabled], .mat-raised-button[disabled][disabled], .mat-fab.mat-primary[disabled], .mat-fab.mat-accent[disabled], .mat-fab.mat-warn[disabled], .mat-fab[disabled][disabled], .mat-mini-fab.mat-primary[disabled], .mat-mini-fab.mat-accent[disabled], .mat-mini-fab.mat-warn[disabled], .mat-mini-fab[disabled][disabled] {
@@ -609,7 +609,7 @@ input.mat-input-element {
 .mat-button.mat-primary .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.1); }
 .mat-button.mat-accent .mat-ripple-element {
-  background-color: rgba(255, 64, 129, 0.1); }
+  background-color: rgba(68, 138, 255, 0.1); }
 .mat-button.mat-warn .mat-ripple-element {
   background-color: rgba(244, 67, 54, 0.1); }
 
@@ -627,7 +627,7 @@ input.mat-input-element {
   .mat-flat-button.mat-primary {
     background-color: #f50057; }
   .mat-flat-button.mat-accent {
-    background-color: #ff4081; }
+    background-color: #448aff; }
   .mat-flat-button.mat-warn {
     background-color: #f44336; }
   .mat-flat-button.mat-primary[disabled], .mat-flat-button.mat-accent[disabled], .mat-flat-button.mat-warn[disabled], .mat-flat-button[disabled][disabled] {
@@ -642,7 +642,7 @@ input.mat-input-element {
 .mat-icon-button.mat-primary .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.2); }
 .mat-icon-button.mat-accent .mat-ripple-element {
-  background-color: rgba(255, 64, 129, 0.2); }
+  background-color: rgba(68, 138, 255, 0.2); }
 .mat-icon-button.mat-warn .mat-ripple-element {
   background-color: rgba(244, 67, 54, 0.2); }
 
@@ -683,7 +683,7 @@ input.mat-input-element {
 .mat-checkbox-indeterminate.mat-primary .mat-checkbox-background, .mat-checkbox-checked.mat-primary .mat-checkbox-background {
   background-color: #f50057; }
 .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
-  background-color: #ff4081; }
+  background-color: #448aff; }
 .mat-checkbox-indeterminate.mat-warn .mat-checkbox-background, .mat-checkbox-checked.mat-warn .mat-checkbox-background {
   background-color: #f44336; }
 
@@ -697,7 +697,7 @@ input.mat-input-element {
 .mat-checkbox:not(.mat-checkbox-disabled).mat-primary .mat-checkbox-ripple .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.26); }
 .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
-  background-color: rgba(255, 64, 129, 0.26); }
+  background-color: rgba(68, 138, 255, 0.26); }
 .mat-checkbox:not(.mat-checkbox-disabled).mat-warn .mat-checkbox-ripple .mat-ripple-element {
   background-color: rgba(244, 67, 54, 0.26); }
 
@@ -727,7 +727,7 @@ input.mat-input-element {
   .mat-chip.mat-chip-selected.mat-warn .mat-chip-remove:hover {
     opacity: 0.54; }
 .mat-chip.mat-chip-selected.mat-accent {
-  background-color: #ff4081;
+  background-color: #448aff;
   color: white; }
   .mat-chip.mat-chip-selected.mat-accent .mat-chip-remove {
     color: white;
@@ -838,12 +838,12 @@ input.mat-input-element {
 .mat-focused .mat-form-field-label {
   color: #f50057; }
   .mat-focused .mat-form-field-label.mat-accent {
-    color: #ff4081; }
+    color: #448aff; }
   .mat-focused .mat-form-field-label.mat-warn {
     color: #f44336; }
 
 .mat-focused .mat-form-field-required-marker {
-  color: #ff4081; }
+  color: #448aff; }
 
 .mat-form-field-underline {
   background-color: rgba(0, 0, 0, 0.42); }
@@ -856,7 +856,7 @@ input.mat-input-element {
 .mat-form-field-ripple {
   background-color: #f50057; }
   .mat-form-field-ripple.mat-accent {
-    background-color: #ff4081; }
+    background-color: #448aff; }
   .mat-form-field-ripple.mat-warn {
     background-color: #f44336; }
 
@@ -874,7 +874,7 @@ input.mat-input-element {
 .mat-icon.mat-primary {
   color: #f50057; }
 .mat-icon.mat-accent {
-  color: #ff4081; }
+  color: #448aff; }
 .mat-icon.mat-warn {
   color: #f44336; }
 
@@ -893,7 +893,7 @@ input.mat-input-element {
     color: rgba(0, 0, 0, 0.42); }
 
 .mat-accent .mat-input-element {
-  caret-color: #ff4081; }
+  caret-color: #448aff; }
 
 .mat-warn .mat-input-element,
 .mat-form-field-invalid .mat-input-element {
@@ -965,11 +965,11 @@ input.mat-input-element {
   background-color: #f50057; }
 
 .mat-progress-bar.mat-accent .mat-progress-bar-background {
-  fill: #ff80ab; }
+  fill: #82b1ff; }
 .mat-progress-bar.mat-accent .mat-progress-bar-buffer {
-  background-color: #ff80ab; }
+  background-color: #82b1ff; }
 .mat-progress-bar.mat-accent .mat-progress-bar-fill::after {
-  background-color: #ff4081; }
+  background-color: #448aff; }
 
 .mat-progress-bar.mat-warn .mat-progress-bar-background {
   fill: #ffcdd2; }
@@ -981,7 +981,7 @@ input.mat-input-element {
 .mat-progress-spinner circle, .mat-spinner circle {
   stroke: #f50057; }
 .mat-progress-spinner.mat-accent circle, .mat-spinner.mat-accent circle {
-  stroke: #ff4081; }
+  stroke: #448aff; }
 .mat-progress-spinner.mat-warn circle, .mat-spinner.mat-warn circle {
   stroke: #f44336; }
 
@@ -1003,11 +1003,11 @@ input.mat-input-element {
 .mat-radio-button.mat-primary .mat-radio-ripple .mat-ripple-element {
   background-color: rgba(245, 0, 87, 0.26); }
 .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-  border-color: #ff4081; }
+  border-color: #448aff; }
 .mat-radio-button.mat-accent .mat-radio-inner-circle {
-  background-color: #ff4081; }
+  background-color: #448aff; }
 .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element {
-  background-color: rgba(255, 64, 129, 0.26); }
+  background-color: rgba(68, 138, 255, 0.26); }
 .mat-radio-button.mat-warn.mat-radio-checked .mat-radio-outer-circle {
   border-color: #f44336; }
 .mat-radio-button.mat-warn .mat-radio-inner-circle {
@@ -1036,7 +1036,7 @@ input.mat-input-element {
 .mat-form-field.mat-focused.mat-primary .mat-select-arrow {
   color: #f50057; }
 .mat-form-field.mat-focused.mat-accent .mat-select-arrow {
-  color: #ff4081; }
+  color: #448aff; }
 .mat-form-field.mat-focused.mat-warn .mat-select-arrow {
   color: #f44336; }
 .mat-form-field .mat-select.mat-select-invalid .mat-select-arrow {
@@ -1058,13 +1058,13 @@ input.mat-input-element {
   background-color: rgba(0, 0, 0, 0.6); }
 
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
-  background-color: #e91e63; }
+  background-color: #2196f3; }
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
-  background-color: rgba(233, 30, 99, 0.5); }
+  background-color: rgba(33, 150, 243, 0.5); }
 .mat-slide-toggle:not(.mat-checked) .mat-ripple-element {
   background-color: rgba(0, 0, 0, 0.06); }
 .mat-slide-toggle .mat-ripple-element {
-  background-color: rgba(233, 30, 99, 0.12); }
+  background-color: rgba(33, 150, 243, 0.12); }
 .mat-slide-toggle.mat-primary.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
   background-color: #e91e63; }
 .mat-slide-toggle.mat-primary.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
@@ -1106,7 +1106,7 @@ input.mat-input-element {
 .mat-accent .mat-slider-track-fill,
 .mat-accent .mat-slider-thumb,
 .mat-accent .mat-slider-thumb-label {
-  background-color: #ff4081; }
+  background-color: #448aff; }
 .mat-accent .mat-slider-thumb-label-text {
   color: white; }
 
@@ -1118,7 +1118,7 @@ input.mat-input-element {
   color: white; }
 
 .mat-slider-focus-ring {
-  background-color: rgba(255, 64, 129, 0.2); }
+  background-color: rgba(68, 138, 255, 0.2); }
 
 .mat-slider:hover .mat-slider-track-background,
 .cdk-focused .mat-slider-track-background {
@@ -1216,9 +1216,9 @@ input.mat-input-element {
 .mat-tab-group.mat-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-group.mat-accent .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-nav-bar.mat-accent .mat-tab-link:not(.mat-tab-disabled):focus {
-  background-color: rgba(255, 128, 171, 0.3); }
+  background-color: rgba(130, 177, 255, 0.3); }
 .mat-tab-group.mat-accent .mat-ink-bar, .mat-tab-nav-bar.mat-accent .mat-ink-bar {
-  background-color: #ff4081; }
+  background-color: #448aff; }
 .mat-tab-group.mat-accent.mat-background-accent .mat-ink-bar, .mat-tab-nav-bar.mat-accent.mat-background-accent .mat-ink-bar {
   background-color: white; }
 .mat-tab-group.mat-warn .mat-tab-label:not(.mat-tab-disabled):focus,
@@ -1248,9 +1248,9 @@ input.mat-input-element {
 .mat-tab-group.mat-background-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-group.mat-background-accent .mat-tab-link:not(.mat-tab-disabled):focus, .mat-tab-nav-bar.mat-background-accent .mat-tab-label:not(.mat-tab-disabled):focus,
 .mat-tab-nav-bar.mat-background-accent .mat-tab-link:not(.mat-tab-disabled):focus {
-  background-color: rgba(255, 128, 171, 0.3); }
+  background-color: rgba(130, 177, 255, 0.3); }
 .mat-tab-group.mat-background-accent .mat-tab-header, .mat-tab-group.mat-background-accent .mat-tab-links, .mat-tab-nav-bar.mat-background-accent .mat-tab-header, .mat-tab-nav-bar.mat-background-accent .mat-tab-links {
-  background-color: #ff4081; }
+  background-color: #448aff; }
 .mat-tab-group.mat-background-accent .mat-tab-label, .mat-tab-group.mat-background-accent .mat-tab-link, .mat-tab-nav-bar.mat-background-accent .mat-tab-label, .mat-tab-nav-bar.mat-background-accent .mat-tab-link {
   color: white; }
   .mat-tab-group.mat-background-accent .mat-tab-label.mat-tab-disabled, .mat-tab-group.mat-background-accent .mat-tab-link.mat-tab-disabled, .mat-tab-nav-bar.mat-background-accent .mat-tab-label.mat-tab-disabled, .mat-tab-nav-bar.mat-background-accent .mat-tab-link.mat-tab-disabled {
@@ -1285,7 +1285,7 @@ input.mat-input-element {
     background: #f50057;
     color: white; }
   .mat-toolbar.mat-accent {
-    background: #ff4081;
+    background: #448aff;
     color: white; }
   .mat-toolbar.mat-warn {
     background: #f44336;
@@ -1299,57 +1299,12 @@ input.mat-input-element {
   color: white; }
 
 .mat-simple-snackbar-action {
-  color: #ff4081; }
-
-.signUp .mat-form-field-label {
-  color: rgba(0, 0, 0, 0.54); }
-.signUp .mat-hint {
-  color: rgba(0, 0, 0, 0.54); }
-.signUp .mat-focused .mat-form-field-label {
-  color: #f50057; }
-  .signUp .mat-focused .mat-form-field-label.mat-accent {
-    color: #ff4081; }
-  .signUp .mat-focused .mat-form-field-label.mat-warn {
-    color: #f44336; }
-.signUp .mat-focused .mat-form-field-required-marker {
-  color: #ff4081; }
-.signUp .mat-form-field-underline {
-  background-color: rgba(0, 0, 0, 0.42); }
-.signUp .mat-form-field-disabled .mat-form-field-underline {
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.42) 0%, rgba(0, 0, 0, 0.42) 33%, transparent 0%);
-  background-size: 4px 1px;
-  background-repeat: repeat-x; }
-.signUp .mat-form-field-ripple {
-  background-color: #f50057; }
-  .signUp .mat-form-field-ripple.mat-accent {
-    background-color: #ff4081; }
-  .signUp .mat-form-field-ripple.mat-warn {
-    background-color: #f44336; }
-.signUp .mat-form-field-invalid .mat-form-field-label {
-  color: #f44336; }
-  .signUp .mat-form-field-invalid .mat-form-field-label.mat-accent,
-  .signUp .mat-form-field-invalid .mat-form-field-label .mat-form-field-required-marker {
-    color: #f44336; }
-.signUp .mat-form-field-invalid .mat-form-field-ripple {
-  background-color: #f44336; }
-.signUp .mat-error {
-  color: #f44336; }
-.signUp .mat-drawer-container {
-  background-color: #fafafa;
-  color: #ff4081; }
-.signUp .mat-drawer {
-  background-color: white;
-  color: #ff4081; }
-  .signUp .mat-drawer.mat-drawer-push {
-    background-color: white; }
-.signUp .mat-drawer-backdrop.mat-drawer-shown {
-  background-color: rgba(0, 0, 0, 0.6); }
-.signUp.btn-formulaire {
-  background-color: blue; }
+  color: #448aff; }
 
 a {
   text-decoration: none;
-  color: #f50057; }
+  color: #f50057;
+  cursor: pointer; }
 
 .profil {
   max-width: 300px; }
